src/objects/IPM_Red_Yellow_Soft_Validation_Setting__mdt.object
<CustomObject>
    <description>Stores the many financial soft validations to be made and their criteria</description>
    <fields>
        <fullName>IPM_Market_Place_Activity__c</fullName>
        <description>List of allowed MPA values</description>
        <label>IPM Market Place Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Phase__c</fullName>
        <description>List of project phases</description>
        <label>IPM Project Phase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Sub_Type__c</fullName>
        <description>Stores the subType of the project</description>
        <label>IPM Project Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Innovation/Renovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Led Growth(BLG)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Threshold_Status__c</fullName>
        <description>Stores the threshold status of the project</description>
        <label>IPM Threshold Status</label>
        <picklist>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above Threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Threshold</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>checkBMIYellow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkBMIYellow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkGrossProfitYellow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkGrossProfitYellow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkPBOYellow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkPBOYellow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkValidCAPEXYellow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkValidCAPEXYellow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkValidGTOAndITORed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag to indicate that red validation (red and yellow ) are to be done</description>
        <label>checkValidGTOAndITORed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkValidIRRYellow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkValidIRRYellow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkValidITOYellow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkValidITOYellow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkValidNPVYellow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkValidNPVYellow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkValidPaybackYellow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkValidPaybackYellow</label>
        <type>Checkbox</type>
    </fields>
    <label>IPM Red Yellow Soft Validation Setting</label>
    <pluralLabel>IPM Red Yellow Soft Validation Settings</pluralLabel>
</CustomObject>